--- a/.poggit.yml
+++ b/.poggit.yml
@@ -4,5 +4,13 @@ branches:
   - master
 projects:
   Achievement:
-    path: ""
+    libs:
+      - src: dktapps-pm-pl/pmforms/pmforms
+        version: 1.0.0
+      - src: pjz9n-pm-pl/pmforms-addon/pmforms-addon
+        version: 1.0.0
+      - src: PJZ9n/MoneyConnector/MoneyConnector
+        version: 2.3.2
+      - src: CortexPE/Commando/Commando
+        version: 2.1.1
 ...
